WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
76769
Web Inspector: Webkit2: attached Inspector height is not remembered
https://bugs.webkit.org/show_bug.cgi?id=76769
Summary
Web Inspector: Webkit2: attached Inspector height is not remembered
Timothy Hatcher
Reported
2012-01-20 22:11:43 PST
The attached height of the Web Inspector is not rememebered between sessions in WebKit2.
Attachments
Proposed Change
(4.75 KB, patch)
2012-01-21 00:20 PST
,
Timothy Hatcher
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Timothy Hatcher
Comment 1
2012-01-21 00:20:47 PST
Created
attachment 123437
[details]
Proposed Change
mitz
Comment 2
2012-01-21 00:24:43 PST
Comment on
attachment 123437
[details]
Proposed Change View in context:
https://bugs.webkit.org/attachment.cgi?id=123437&action=review
> Source/WebKit2/UIProcess/mac/WebInspectorProxyMac.mm:214 > + [m_inspectorView.get() setFrame:NSMakeRect(NSMinX(inspectedViewFrame), 0.0, NSWidth(inspectedViewFrame), inspectorPageGroup()->preferences()->inspectorAttachedHeight())];
Please change “0.0” to “0”.
Timothy Hatcher
Comment 3
2012-01-22 06:06:17 PST
Commited in
r105571
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug