Make WebKit2 remember the height of the Web Inspector when it is docked.

https://webkit.org/b/76769

Reviewed by Dan Bernstein.

* Shared/WebPreferencesStore.h: Added InspectorAttachedHeight.
* UIProcess/WebInspectorProxy.cpp:
(WebKit::WebInspectorProxy::setAttachedWindowHeight): Call WebPreferencesStore::setInspectorAttachedHeight.
* UIProcess/mac/WebInspectorProxyMac.mm:
(WebKit::WebInspectorProxy::platformAttach): Set the height of the inspector's WKView to inspectorAttachedHeight.
(WebKit::WebInspectorProxy::platformSetAttachedWindowHeight): Remove unneeded setNeedsDisplay: calls.

Canonical link: https://commits.webkit.org/93607@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@105571 268f45cc-cd09-0410-ab3c-d52691b4dbfc